# ViaLacteaVisualAnalytics

./: .gitignore  INSTALL.md  LICENSE  README.md
Code/: .clang-format  CMakeLists.txt  VLVA_Req_Files.txt  ViaLacteaVisualAnalytics.desktop  ViaLacteaVisualAnalytics.pro  ViaLacteaVisualAnalytics.pro.shared  VisIVODesktop-vtk6_qt5.pro  VisIVODesktop-vtk6_qt5.pro.user.a9018b3  VisIVODesktop-vtk6_qt5.pro.user.d7bdcdd.4.8-pre1  customprocess.cpp  customprocess.h  includes.pri.example  logo.icns  visivo.qrc  visivo.rc
Code/cmake/: FindCFITSIO.cmake
Code/icons/: VisIVODesktop.icns  logo_256_beta.icns  logo_old.icns
Code/script_idl_mv/: modelsed_fit.pro  modelsed_fit_v2.pro  pad0_num.pro  remove_char.pro  rename_tags.pro  sedfitgrid_engine_thick_vialactea.pro  sedfitgrid_engine_thin_vialactea.pro  tostring.pro  vialactea_tap_sedfit.pro  vialactea_tap_sedfit_v2.pro  vialactea_tap_sedfit_v3.pro  vialactea_tap_sedfit_v6.pro  vialactea_tap_sedfit_v7.pro  wheretomulti.pro
Code/script_idl_mv/astrolib/: .idlwave_catalog  forprint.pro  xyad.pro
Code/script_idl_mv/higalfit/: lbol.pro  newtest.pro  sedbank_thick_large.pro  sedbank_thin_large.pro  sedfitgrid_engine_thick_vialactea.pro  sedfitgrid_engine_thin_vialactea.pro
Code/sed_fit/: portmapping.txt  workflow.xml  workflow.xml.orig
Code/src/: ArepoExtractorWidget.cpp  ArepoExtractorWidget.h  FilterFITSDialog.cpp  FilterFITSDialog.h  HiPS2FITSForm.cpp  HiPS2FITSForm.h  LoadingWidget.cpp  QDetachTabWidget.cpp  VLKBInventoryTree.cpp  VLKBInventoryTree.h  aboutform.cpp  aboutform.h  astroutils.cpp  astroutils.h  authkeys.h  authwrapper.cpp  authwrapper.h  base64.cpp  caesarwidget.cpp  caesarwidget.h  caesarwindow.cpp  caesarwindow.h  catalogue.cpp  catalogue.h  color.cpp  color.h  contour.cpp  contour.h  dbquery.cpp  dbquery.h  dcvisualizer.cpp  dcvisualizer.h  downloadmanager.cpp  downloadmanager.h  errorMessage.h  extendedglyph3d.cpp  extendedglyph3d.h  filtercustomize.cpp  filtercustomize.h  fitsheadermodifierdialog.cpp  (+180 more)
Code/src/ds9region/: CodeUtils.h  Consts.h  DS9Region.cpp  DS9Region.h  DS9RegionParser.cpp  DS9RegionParser.h
Code/src/interactors/: vtkdrawlineinteractorstyleimage.cpp  vtkdrawlineinteractorstyleimage.h  vtkinteractorstyledrawarrow.cpp  vtkinteractorstyledrawarrow.h  vtkinteractorstyleimagecustom.cpp  vtkinteractorstyleimagecustom.h  vtkinteractorstyleprofile.cpp  vtkinteractorstyleprofile.h
Code/src/libsamp/: samp.h
Code/src/libsamp/xmlrpc-c/: abyss.h  base.h  client.h  server.h  server_abyss.h  util.h
Code/src/libwcs/: CMakeLists.txt  actread.c  binread.c  catutil.c  ctgread.c  daoread.c  dateutil.c  distort.c  fileutil.c  fitsfile.c  fitsfile.h  fitshead.h  fitswcs.h  gsc2read.c  gscread.c  hput.c  imhfile.c  imsetwcs.c  imutil.c  sdssread.c  skybotread.c  tabread.c  tmcread.c  ty2read.c  uacread.c  ubcread.c  ucacread.c  ujcread.c  wcs.h  wcscat.h  wcscon.c  wcsinit.c  wcslib.c  wcslib.h  webread.c  win_fixes.h  win_time.h
Code/src/simcube/: imresize.cpp  imresize.h  simcube_projection.hpp
Code/src/simcube/simcube_projection-collapse/: api-collapse.cpp  fits_simcube.cpp  fits_simcube.hpp  image.cpp  image.hpp  projection.cpp  projection.hpp  utils.cpp  utils.hpp
Code/src/simcube/simcube_projection-galactic/: api-galactic.cpp  fits_simimg.cpp  fits_simimg.hpp
Code/ui/: ArepoExtractorWidget.ui  FilterFITSDialog.ui  HiPS2FITSForm.ui  VLKBInventoryTree.ui  aboutform.ui  caesarwidget.ui  caesarwindow.ui  contour.ui  dbquery.ui  filtercustomize.ui  fitsheadermodifierdialog.ui  fitsheaderviewer.ui  fitsimagestatisiticinfo.ui  higalselectedsources.ui  loadingwidget.ui  lutcustomize.ui  mainwindow.ui  mcutoutsummary.ui  operationqueue.ui  plotwindow.ui  pqPVWindow.ui  pqmeminspector.ui  pqwindowcube.ui  pqwindowimage.ui  profilewindow.ui  sedfitgrid_thick.ui  sedfitgrid_thin.ui  sedvisualizerplot.ui  selectedsourcefieldsselect.ui  selectedsourcesform.ui  sessionloader.ui  settingform.ui  sfilterdialog.ui  simcollapsedialog.ui  simplacedialog.ui  simpleconesearchform.ui  sourcewidget.ui  startupwindow.ui  startupwindow.ui.autosave  subsetselectordialog.ui  (+17 more)
Dep/: sedfitgrid_engine_thin_vialactea.py
PanoramicView/: OpenLayers.js  openlayers.html  tilemapresource.xml
Utils/: ReadMe.txt  arepo-extractor.py  lbol.py  planck.py  pvplot.py  pyvo_datalink.py  pyvo_scs.py  pyvo_tap.py  pyvo_utils.py  sedbank_thick_large.py  sedbank_thin_large.py  sedfit_main.py  sedfitgrid_engine_thick_vialactea.py  sfilter.py
build-VisIVODesktop-vtk6_qt5-Desktop_Qt_5_14_2_clang_64bit-Debug/: Makefile  ui_aboutform.h  ui_contour.h  ui_dbquery.h  ui_filtercustomize.h  ui_fitsimagestatisiticinfo.h  ui_lutcustomize.h  ui_mainwindow.h  ui_plotwindow.h  ui_sedfitgrid_thick.h  ui_sedfitgrid_thin.h  ui_sedvisualizerplot.h  ui_selectedsourcefieldsselect.h  ui_selectedsourcesform.h  ui_vialactea.h  ui_vialacteainitialquery.h  ui_vialacteastringdictwidget.h  ui_vtkfitstoolswidget.h  ui_vtkfitstoolwidget_new.h  ui_vtktoolswidget.h
build-VisIVODesktop-vtk6_qt5-QTWebKit-Debug/: .qmake.stash
build-VisIVODesktop-vtk6_qt5-QT_Brew_version-Debug/: Makefile  moc_aboutform.cpp  moc_contour.cpp  moc_dbquery.cpp  moc_downloadmanager.cpp  moc_filtercustomize.cpp  moc_fitsimagestatisiticinfo.cpp  moc_higalselectedsources.cpp  moc_histogram.cpp  moc_loadingwidget.cpp  moc_lutcustomize.cpp  moc_mainwindow.cpp  moc_operationqueue.cpp  moc_plotwindow.cpp  moc_qcustomplot.cpp  moc_sed.cpp  moc_sedfitgrid_thick.cpp  moc_sedfitgrid_thin.cpp  moc_sednode.cpp  moc_sedplotpointcustom.cpp  moc_sedvisualizerplot.cpp  moc_selectedsourcefieldsselect.cpp  moc_selectedsourcesform.cpp  moc_settingform.cpp  moc_treemodel.cpp  moc_vialactea.cpp  moc_vialactea_fileload.cpp  moc_vialacteainitialquery.cpp  moc_vialacteastringdictwidget.cpp  moc_viewselectedsourcedataset.cpp  moc_visivoimporterdesktop.cpp  moc_vlkbquery.cpp  moc_vlkbquerycomposer.cpp  moc_vlkbsimplequerycomposer.cpp  moc_vtkfitstoolswidget.cpp  moc_vtkfitstoolwidget_new.cpp  moc_vtktoolswidget.cpp  moc_vtkwindow_new.cpp  qrc_visivo.cpp  ui_higalselectedsources.h  (+11 more)
wcstools/: dateutil.c  distort.c  (+8 more)
(+2 files in other folders)
